Allow arguments to the debugging shell

BUG: 117063